--- a/rel/linc/releases/1.0/sys.config
+++ b/rel/linc/releases/1.0/sys.config
@@ -29,6 +29,10 @@
      %% {port, 5, [{interface, "tap1"}, {ip, "10.0.0.1"}]},
      %% - tap interface with explicit type and queues disabled
      %% {port, 6, [{interface, "net1"}, {type, tap}]}
+
+	{port, 1, [{interface,"tap-linc-port0"}]},
+	{port, 2, [{interface,"tap-linc-port1"}]},
+	{port, 3, [{interface,"tap-linc-port2"}]}
     ]},
 
    {capable_switch_queues,
@@ -55,7 +59,7 @@
        %% Default OFP controller port is 6633.
        {controllers,
         [
-         %% {"Switch0-DefaultController", "localhost", 6633, tcp}
+         {"Switch0-DefaultController", "localhost", 6633, tcp}
 
          %% To establish auxiliary connections to the controller specify them
          %% in the list of additional options. For example to start 2 tcp and one
@@ -90,9 +94,10 @@
        {ports, [
                 %% Examples:
                 %% - port without queues:
-                %% {port, 1, {queues, []}},
+                {port, 1, {queues, []}},
                 %% - port with two queues:
-                %% {port, 2, {queues, [1, 2]}}
+                {port, 2, {queues, []}},
+                {port, 3, {queues, []}}
                ]}
       ]}
 
