first LING-base image built

--- a/rebar.config
+++ b/rebar.config
@@ -27,6 +27,8 @@
                  "367db4e194f4a0ec88abd3582a33fbf1eaa91e34"}},
   {tunctl, ".*", {git, "http://github.com/msantos/tunctl.git",
                   "4faf1a52f1b364df6eb71176477861dbf60dcf0f"}},
+  {ling_builder,".*",
+	{git,"git://github.com/maximk/ling_builder.git","master"}},
   {sync, ".*",
    {git, "https://github.com/mentels/sync.git", {branch, "master"}}}]}.
 
@@ -35,3 +37,10 @@
 
 {eunit_opts, [verbose]}.
 {eunit_compile_opts, [{i, "../"}]}.
+
+{plugins,[ling_builder]}.
+
+{ling_builder_opts,[{build_host,"build.erlangonxen.org:8080"},
+	{username,"test"},
+	{password,"test"}]}.
+
