first unit test passes

--- a/rebar.config
+++ b/rebar.config
@@ -42,5 +42,6 @@
 
 {ling_builder_opts,[{build_host,"build.erlangonxen.org:8080"},
 	{username,"test"},
-	{password,"test"}]}.
+	{password,"test"},
+	{import_lib,eunit}]}.
 
