--- a/rebar.config
+++ b/rebar.config
@@ -43,5 +43,7 @@
 {ling_builder_opts,[{build_host,"build.erlangonxen.org:8080"},
 	{username,"test"},
 	{password,"test"},
-	{import_lib,eunit}]}.
+	{import_lib,eunit},
+	{import_lib,tools},
+	{import_lib,compiler}]}.
 
