--- a/rebar.config
+++ b/rebar.config
@@ -29,6 +29,9 @@
                   "4faf1a52f1b364df6eb71176477861dbf60dcf0f"}},
   {ling_builder,".*",
 	{git,"git://github.com/maximk/ling_builder.git","master"}},
+  {lingkit,".*",
+	{git,"git://github.com/proger/lingkit.git","master"}},
+
   {sync, ".*",
    {git, "https://github.com/mentels/sync.git", {branch, "master"}}}]}.
 
@@ -45,5 +48,6 @@
 	{password,"test"},
 	{import_lib,eunit},
 	{import_lib,tools},
+	{import_lib,inets},
 	{import_lib,compiler}]}.
 
