--- a/rebar.config
+++ b/rebar.config
@@ -46,6 +46,12 @@
 	{password,"test"},
 	{import_lib,eunit},
 	{import_lib,tools},
-	{import_lib,inets},
+	{import_lib,public_key},
+	{import_lib,asn1},
+	{import_lib,crypto},
+	{import_lib,ssh},
+	{import_lib,xmerl},
+	{import_lib,mnesia},
+	{import_lib,syntax_tools},
 	{import_lib,compiler}]}.
 
