PEFRORMANCE.md created

--- a/rebar.config
+++ b/rebar.config
@@ -23,10 +23,10 @@
                 {tag, "0.8.1"}}},
   {procket, ".*", {git, "http://github.com/msantos/procket.git",
                    "0c32f661dc54aeff9c89a4ced3449eb9856a531f"}},
-%  {epcap, ".*", {git, "http://github.com/esl/epcap.git",
-%                "367db4e194f4a0ec88abd3582a33fbf1eaa91e34"}},
-%  {tunctl, ".*", {git, "http://github.com/msantos/tunctl.git",
-%                  "4faf1a52f1b364df6eb71176477861dbf60dcf0f"}},
+  {epcap, ".*", {git, "http://github.com/esl/epcap.git",
+                "367db4e194f4a0ec88abd3582a33fbf1eaa91e34"}},
+  {tunctl, ".*", {git, "http://github.com/msantos/tunctl.git",
+                  "4faf1a52f1b364df6eb71176477861dbf60dcf0f"}},
   {ling_builder,".*",
 	{git,"git://github.com/maximk/ling_builder.git","master"}},
 
