--- a/priv/sys.config
+++ b/priv/sys.config
@@ -5,8 +5,8 @@
 
    {capable_switch_ports,
     [
-	 {port,1,[{interface,"eth1"},{type,vif},{port_rate,{1,gbps}}]},
-	 {port,2,[{interface,"eth2"},{type,vif},{port_rate,{1,gbps}}]}
+	 {port,1,[{interface,"eth1"},{type,vif}]},
+	 {port,2,[{interface,"eth2"},{type,vif}]}
     ]},
 
    {capable_switch_queues,[]},
