flow module generation works

--- a/apps/linc_max/Makefile
+++ b/apps/linc_max/Makefile
@@ -1,7 +1,15 @@
 
 .PHONY: default
 
-default: headers.beam
+BEAMS := $(patsubst %.erl,%.beam,$(wildcard *.erl))
+
+#default: $(BEAMS)
+default: flow0.erl
+
+flow0.erl: flow0.tab
+
+%.erl: %.tab
+	./generator $<
 
 %.beam: %.erl
 	erlc $<
