--- a/priv/sys.config
+++ b/priv/sys.config
@@ -15,7 +15,7 @@
     [
      {switch,0,
       [
-       {backend,linc_us4},
+       {backend,linc_max},
        {controllers,
         [
          {"Switch0-DefaultController","localhost",6633,tcp}
