--- a/scripts/genflow.conf
+++ b/scripts/genflow.conf
@@ -2,6 +2,10 @@
 %% Test flow table generation config
 %%
 
+{test0,[
+	{num_flows,0}
+]}.
+
 {test3,[
 	{num_flows,128},
 	{match,{1.0,eth_dst,16#ffffff}},
