--- a/priv/sys.config
+++ b/priv/sys.config
@@ -16,10 +16,13 @@
      {switch,0,
       [
        {backend,linc_max},
+
        {controllers,
         [
-         {"Switch0-DefaultController","localhost",6633,tcp}
+       %%  {"Switch0-DefaultController","localhost",6633,tcp}
         ]},
+	
+	   {controllers_listener,{"0.0.0.0",6634,tcp}},
 
        {queues_status, disabled},
 
