--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
  ["apps/linc",
   "apps/linc_max",
   "apps/linc_us4",
-%  "apps/linc_us3",
+  "apps/linc_us3",
   "rel"]}.
 
 {deps,
@@ -45,8 +45,8 @@
 {ling_builder_opts,[{build_host,"build.erlangonxen.org:8080"},
 	{username,"test"},
 	{password,"test"},
+	{build_config,fastest},
 	{import,"priv/*"},
-	{import,"*.beam"},
 	{import_lib,eunit},
 	{import_lib,tools},
 	{import_lib,public_key},
