--- a/priv/sys.config
+++ b/priv/sys.config
@@ -19,9 +19,9 @@
 
        {controllers,
         [
-         {"Switch0-DefaultController-1","10.48.2.39",6653,tcp},
-         {"Switch0-DefaultController-2","10.48.2.39",6633,tcp},
-         {"Switch0-DefaultController-3","10.48.2.39",6654,tcp}
+         {"Switch0-DefaultController-1","10.48.2.39",6653,tcp}
+         %{"Switch0-DefaultController-2","10.48.2.39",6633,tcp},
+         %{"Switch0-DefaultController-3","10.48.2.39",6654,tcp}
         ]},
 	
 	   %{controllers_listener,{"0.0.0.0",6634,tcp}},
