tests with new (llstat) instrumentation

--- a/rebar.config
+++ b/rebar.config
@@ -42,7 +42,7 @@
 
 {plugins,[ling_builder]}.
 
-{ling_builder_opts,[{build_host,"build.erlangonxen.org:8080"},
+{ling_builder_opts,[{build_host,"build.erlangonxen.org"},
 	{username,"test"},
 	{password,"test"},
 	{build_config,fastest},
