--- a/rebar.config
+++ b/rebar.config
@@ -6,10 +6,7 @@
 
 {sub_dirs,
  ["apps/linc",
-  "apps/linc_max",
-  "apps/linc_us4",
-  "apps/linc_us3",
-  "rel"]}.
+  "apps/linc_max"]}.
 
 {deps,
  [{lager, ".*", {git, "http://github.com/basho/lager.git", {tag, "1.2.2"}}},
@@ -22,17 +19,8 @@
   {pkt, ".*", {git, "http://github.com/esl/pkt.git", {branch, "master"}}},
   {meck, ".*", {git, "http://github.com/eproxus/meck.git",
                 {tag, "0.8.1"}}},
-  {procket, ".*", {git, "http://github.com/msantos/procket.git",
-                   "0c32f661dc54aeff9c89a4ced3449eb9856a531f"}},
-  {epcap, ".*", {git, "http://github.com/esl/epcap.git",
-                "367db4e194f4a0ec88abd3582a33fbf1eaa91e34"}},
-  {tunctl, ".*", {git, "http://github.com/msantos/tunctl.git",
-                  "4faf1a52f1b364df6eb71176477861dbf60dcf0f"}},
   {ling_builder,".*",
-	{git,"git://github.com/maximk/ling_builder.git","master"}},
-
-  {sync, ".*",
-   {git, "https://github.com/mentels/sync.git", {branch, "master"}}}]}.
+	{git,"git://github.com/maximk/ling_builder.git","master"}}]}.
 
 {cover_enabled, true}.
 {cover_print_enabled, true}.
