REMOTE_MOUNTS and OF_CONTROLLERS options added to LINGConfig.mk

--- a/LINGConfig.mk.sample
+++ b/LINGConfig.mk.sample
@@ -26,3 +26,8 @@ DEFAULT_BRIDGE := xenbr0
 # bridges are named br1 and br2.
 BRIDGE_PREFIX := br
 
+# External filesystem, see http://build.erlangonxen.org/mounting for details
+#REMOTE_MOUNTS := -secret xxxxxxxx yyyyyyyy -9p 192.168.0.1 /home /diod
+
+# The list of logical switch controllers
+#OF_CONTROLLERS := 10.48.2.39:6653 10.48.2.60:6653
