--- a/LINGConfig.mk.sample
+++ b/LINGConfig.mk.sample
@@ -28,7 +28,7 @@ BRIDGE_PREFIX := br
 
 # External filesystem, see http://build.erlangonxen.org/mounting for details
 # REMOTE_MOUNTS := -secret xxxxxxxx yyyyyyyy
-# REMOTE_MOUNTS += 10.10.10.10 /map/from/linux/path /map/to/ling/path
+# REMOTE_MOUNTS += -9p 10.10.10.10 /map/from/linux/path /map/to/ling/path
 REMOTE_MOUNTS :=
 
 # The list of logical switch controllers
