--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
 
 {sub_dirs,
  ["apps/linc",
-  "apps/linc_max"]}.
+  "apps/linc_max",
+  "apps/linc_ofdpa"]}.
 
 {deps,
  [{lager, ".*", {git, "http://github.com/basho/lager.git", {tag, "1.2.2"}}},
