Revert "get rid of rebar"
This reverts commit f1d8f00cc01c3a48af17d225c0ee10c759549e2c.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .eunit
 
+deps
 
 *.o
 *.beam
@@ -16,7 +17,3 @@ priv/sys.config
 domain1.cfg
 domain2.cfg
 domain3.cfg
-
-log/*
-ebin/*
-lincx.config
