packet-outs added

--- a/rebar.config
+++ b/rebar.config
@@ -18,8 +18,8 @@
   {of_config, ".*",
    {git, "https://github.com/FlowForwarding/of_config.git", {branch, "master"}}},
   {pkt, ".*", {git, "http://github.com/esl/pkt.git", {branch, "master"}}},
-  {meck, ".*", {git, "http://github.com/eproxus/meck.git",
-                {tag, "0.8.1"}}},
+  {meck, ".*", {git, "https://github.com/eproxus/meck.git",
+                {tag, "0.8.2"}}},
   {ling_builder,".*",
 	{git,"git://github.com/maximk/ling_builder.git","master"}}]}.
 
