README.md added to agentx

--- a/apps/linc_ofdpa/agentx/Makefile
+++ b/apps/linc_ofdpa/agentx/Makefile
@@ -5,12 +5,16 @@ OBJS := $(patsubst %.c,%.o,$(wildcard *.c))
 
 CPPFLAGS :=
 CFLAGS :=
-LDFLAGS := -lapr-1
+
+LDFLAGS := -L /broadcom/of-dpa/ofdpa-1.0.0.1-im-cdp/bin/im-x86-trident-ub12
+
+LDFLAGS_FINAL := -lapr-1
+LDFLAGS_FINAL += -lrpc_client
 
 default: agentx
 
 agentx: $(OBJS)
-	gcc -o $@ $(LDFLAGS) $^
+	gcc -o $@ $(LDFLAGS) $^ $(LDFLAGS_FINAL)
 
 %.o: %.c
 	gcc -c $(CPPFLAGS) $(CFLAGS) $<
