--- a/priv/sys.config.sample
+++ b/priv/sys.config.sample
@@ -4,35 +4,25 @@
     {capable_switch_ports,[
       {port,1,[{interface,"eth1"},{type,vif}]},
       {port,2,[{interface,"eth2"},{type,vif}]},
-      {port,3,[{interface,"eth3"},{type,vif}]},
-      {port,4,[{interface,"eth4"},{type,vif}]},
-      {port,5,[{interface,"eth5"},{type,vif}]},
-      {port,6,[{interface,"eth6"},{type,vif}]}
+      {port,3,[{interface,"eth3"},{type,vif}]}
     ]},
     {capable_switch_queues,[]},
     {logical_switches,[
       {switch,0,[
         {backend,linc_max},
         {controllers,[
-          %{"Stu's Laptop","10.102.28.219",6653,tcp},
-          %{"Stu's Laptop","10.120.253.192",6653,tcp},
-          %{"Switch0-DefaultController-2","10.48.2.39",6633,tcp},
-          %{"NCI","10.48.2.39",6653,tcp}
+          {"ryu","10.0.0.100",6633,tcp}
         ]},  
         {controllers_listener,{"0.0.0.0",6634,tcp}},
         {queues_status, disabled},
         {ports, [
           {port,1,{queues,[]}},
           {port,2,{queues,[]}},
-          {port,3,{queues,[]}},
-          {port,4,{queues,[]}},
-          {port,5,{queues,[]}},
-          {port,6,{queues,[]}}
+          {port,3,{queues,[]}}
         ]}
       ]}
     ]}
   ]},
-
   {enetconf,[
     {capabilities,[
       {base, {1, 0}},
@@ -58,8 +48,7 @@
     ]},
     {crash_log,"/log/crash.log"}
   ]},
-
- {sasl,[
+{sasl,[
     {sasl_error_logger, {file, "/log/sasl-error.log"}},
     {errlog_type, error},
     {error_logger_mf_dir, "/log"},          % Log directory
@@ -67,3 +56,4 @@
     {error_logger_mf_maxfiles, 5}           % 5 files max
   ]}
 ].
+
