--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: C
 notifications:
   email:
     recipients:
-      aleksey.vasilenko@gmail.com
-      maxim.kharchenko@gmail.com
+      - aleksey.vasilenko@gmail.com
+      - maxim.kharchenko@gmail.com
     on_success: always
     on_failure: always
 before_install:
