--- a/priv/sys.config
+++ b/priv/sys.config
@@ -1,28 +1,9 @@
 [
   {linc,[
     {of_config,disabled},
-    {capable_switch_ports,[
-      {port,1,[{interface,"eth1"},{type,vif}]},
-      {port,2,[{interface,"eth2"},{type,vif}]},
-      {port,3,[{interface,"eth3"},{type,vif}]}
-    ]},
-    {capable_switch_queues,[]},
-    {logical_switches,[
-      {switch,0,[
-        {backend,linc_max},
-        {controllers,[
-          {"ryu","10.0.0.100",6633,tcp}
-        ]},  
-        {controllers_listener,{"0.0.0.0",6634,tcp}},
-        {queues_status, disabled},
-        {ports, [
-          {port,1,{queues,[]}},
-          {port,2,{queues,[]}},
-          {port,3,{queues,[]}}
-        ]}
-      ]}
-    ]}
+    {capable_switch_queues,[]}
   ]},
+
   {enetconf,[
     {capabilities,[
       {base, {1, 0}},
@@ -48,7 +29,8 @@
     ]},
     {crash_log,"/log/crash.log"}
   ]},
-{sasl,[
+
+ {sasl,[
     {sasl_error_logger, {file, "/log/sasl-error.log"}},
     {errlog_type, error},
     {error_logger_mf_dir, "/log"},          % Log directory
@@ -56,4 +38,3 @@
     {error_logger_mf_maxfiles, 5}           % 5 files max
   ]}
 ].
-
