Upgrade to Erlang 17

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{require_otp_vsn, "R16B01"}.
+{require_otp_vsn, "17"}.
 
 {erl_opts, [
 	fail_on_warning,
@@ -16,7 +16,6 @@
 	{enetconf, ".*", {git, "https://github.com/FlowForwarding/enetconf.git", {branch, "master"}}},
 	{of_config, ".*", {git, "https://github.com/FlowForwarding/of_config.git", {branch, "master"}}},
 	{pkt, ".*", {git, "http://github.com/esl/pkt.git", {branch, "master"}}},
-	{meck, ".*", {git, "http://github.com/eproxus/meck.git",{tag, "0.8.1"}}},
 	{yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git",{tag, "v0.3.1-1"}}}
 ]}.
 
