Fix compilation warnings

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
 	{enetconf, ".*", {git, "https://github.com/FlowForwarding/enetconf.git", {branch, "master"}}},
 	{of_config, ".*", {git, "https://github.com/FlowForwarding/of_config.git", {branch, "master"}}},
 	{pkt, ".*", {git, "http://github.com/esl/pkt.git", {branch, "master"}}},
-	{yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git",{tag, "v0.3.1-1"}}}
+	{yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git",{branch, "master"}}}
 ]}.
 
 {cover_enabled, true}.
