--- a/rebar.config
+++ b/rebar.config
@@ -11,11 +11,11 @@
 ]}.
 
 {deps, [
-	{lager, ".*", {git, "http://github.com/basho/lager.git", {tag, "1.2.2"}}},
-	{of_protocol, ".*", {git, "http://github.com/FlowForwarding/of_protocol.git", {branch, "master"}}},
+	{lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "1.2.2"}}},
+	{of_protocol, ".*", {git, "https://github.com/FlowForwarding/of_protocol.git", {branch, "master"}}},
 	{enetconf, ".*", {git, "https://github.com/FlowForwarding/enetconf.git", {branch, "master"}}},
 	{of_config, ".*", {git, "https://github.com/FlowForwarding/of_config.git", {branch, "master"}}},
-	{pkt, ".*", {git, "http://github.com/esl/pkt.git", {branch, "master"}}},
+	{pkt, ".*", {git, "https://github.com/esl/pkt.git", {branch, "master"}}},
 	{yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git",{branch, "master"}}}
 ]}.
 
